--- a/src/components/searchBar/SearchBarComponent.css
+++ b/src/components/searchBar/SearchBarComponent.css
@@ -1,65 +1,33 @@
+.search {
+  display: inline-block;
+}
 .searchInputs {
-    margin-top: 5px;
-    display: flex;
+  margin-top: 5px;
+  display: flex;
+  align-content: center;
 }
 
-.search input{
-    background-color: white;
-    border: 0;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 13px;
-    padding: 9px;
-    height: 15px;
-    width: 300px;
+.search input {
+  background-color: white;
+  border: 0;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 13px;
+  padding: 9px;
+  height: 15px;
+  width: 300px;
 }
 
 .searchIcon {
-    height: 33px;
-    width: 40px;
-    background-color: white;
-    display: grid;
-    place-items: center;
-    cursor: pointer;
+  height: 33px;
+  width: 40px;
+  background-color: white;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
-/* .dataResult {
-    position: relative;
-    margin-top: 5px;
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    overflow: hidden;
-    overflow-y: auto;
-} */
-
-/* .dataResult::-webkit-scrollbar {
-    display: none;
-}
-
-.dataResult .dataItem {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    color: black;
-}
-.dataItem p {
-    margin-left: 10px;
-}
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    background-color: white;
-}
-
-#clearBtn {
-    cursor: pointer;
-} */
