change height to 100 vh

--- a/src/components/postRecipe/PostRecipeComponent.css
+++ b/src/components/postRecipe/PostRecipeComponent.css
@@ -2,6 +2,7 @@
     background-color: #333;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
+    height: 100vh;
 }
 .title{
     margin: 4rem;
