--- a/src/components/home/HomeComponent.css
+++ b/src/components/home/HomeComponent.css
@@ -3,7 +3,7 @@
     /* background-size: cover; */
     width: 100%;
     background-color: #333;
-    height: 200%;
+    height: 100vh;
     margin-bottom: 0px;
     position: relative;
     
